# gws-meet-notes

gemini-meet-notes-dev/: .dockerignore  .env.example  .gitignore  Dockerfile  EMERGENCY_FIX.md  IMPLEMENTATION_FIXES.md  README.md  main.py  pyproject.toml  requirements.txt
gemini-meet-notes-dev/config/: container.py  settings.py
gemini-meet-notes-dev/functions/drive-monitor/: main.py  requirements.txt
gemini-meet-notes-dev/functions/meet-processor/: main.py  requirements.txt
gemini-meet-notes-dev/src/application/dto/: process_recording_dto.py
gemini-meet-notes-dev/src/application/services/: application_service.py
gemini-meet-notes-dev/src/application/use_cases/: process_meet_recording_use_case.py  setup_infrastructure_use_case.py
gemini-meet-notes-dev/src/domain/entities/: meet_recording.py
gemini-meet-notes-dev/src/domain/repositories/: google_drive_repository.py  meet_recording_repository.py
gemini-meet-notes-dev/src/domain/services/: domain_service.py
gemini-meet-notes-dev/src/domain/value_objects/: file_info.py  user_info.py
gemini-meet-notes-dev/src/infrastructure/google_apis/: google_drive_client.py
gemini-meet-notes-dev/src/infrastructure/pubsub/: pubsub_client.py
gemini-meet-notes-dev/src/infrastructure/storage/: local_storage_repository.py
gemini-meet-notes-dev/src/presentation/handlers/: pubsub_handler.py  setup_handler.py
gemini-meet-notes-dev/src/presentation/middleware/: logging_middleware.py
gemini-meet-notes-dev/src/shared/exceptions/: domain_exceptions.py  infrastructure_exceptions.py
(+1 files in other folders)
